dist/udemy/bootcamp/backend/YelpCamp/v3/readme.md
#YelpCamp

#Initial Setup
* Add Landing Page
* Add Campgrounds Page that lists all campgrounds

Each Campground has:
    * Name
    * Image

#Layout and Basic Styling
* Create our header and footer partials
* Add in Bootstrap

#Creating New Campgrounds
* Setup new campground POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form

#Style the campgrounds page
* Add a better header/title
* Make campgrounds display in a grid

#Style the Navbar and Form
* Add a navbar to all templates
* Style the new campground form

##v2
#Add Mongoose
* Install and configure mongoose
* Setup campground model
* Use campground model inside of our routes

#Show Page
* Review the RESTful routes we've seen ssoo far
* Add description to our campground model
* Show db.collection.drop()
* Add a show route/template

##v3
#Refactor Mongoose Code
* Create a models directory
* Use module.exports
* Require everything correctly

#Add Seeds file
* Add a seeds.js file
* Run the seeds file every time the server starts

#Add the Comment model
* Fix errors
* Display comments on campground show page